[package]
name = "allasyncwrites"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = "0.3.29"
pin-project = "1.1.3"
tokio = { version = "1.35.0", features = ["full"] }

[dev-dependencies]
async-compression = { version = "0.4.5", features = ["futures-io", "tokio", "zstd"] }
base64 = "0.21.7"
chrono = "0.4.33"
serde = {version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
